# pe-compass

./: .gitignore  Cargo.toml  README.md  master.json  my.json  panics.txt
parsed-samples/: excel.json
parsed-samples/win10-benware/: ARP.EXE.json  AgentService.exe.json  AppHostRegistrationVerifier.exe.json  AppVClient.exe.json  AppVDllSurrogate.exe.json  AppVNice.exe.json  AppVShNotify.exe.json  ApplicationFrameHost.exe.json  ApplySettingsTemplateCatalog.exe.json  ApplyTrustOffline.exe.json  ApproveChildRequest.exe.json  AtBroker.exe.json  AuthHost.exe.json  AxInstUI.exe.json  BackgroundTransferHost.exe.json  BdeHdCfg.exe.json  BdeUISrv.exe.json  BioIso.exe.json  BitLockerDeviceEncryption.exe.json  BitLockerWizard.exe.json  BitLockerWizardElev.exe.json  ByteCodeGenerator.exe.json  CIDiag.exe.json  CameraSettingsUIHost.exe.json  CastSrv.exe.json  CertEnrollCtrl.exe.json  CheckNetIsolation.exe.json  ClipRenew.exe.json  ClipUp.exe.json  CloudExperienceHostBroker.exe.json  CloudNotifications.exe.json  CompMgmtLauncher.exe.json  CompPkgSrv.exe.json  CompatTelRunner.exe.json  ComputerDefaults.exe.json  CredentialEnrollmentManager.exe.json  CredentialUIBroker.exe.json  CustomInstallExec.exe.json  DFDWiz.exe.json  DTUHandler.exe.json  (+584 more)
pe-samples/: targets.txt
releases/: pe-compass-x64-osx-v.0.0.2  pe-compass-x64-v.0.0.1
scripts/: pe_compass_recurse.sh  pe_compass_recurse_inspect.sh
specifications/: copy_pe_structs.rs  pe_structs.rs  pe_visual.txt  scratchpad.txt  winnt.h  winnt.txt
src/: main.rs  mod.rs
src/modules/: mod.rs  pe_parser.rs
src/structs/: co_structs.rs  (+3 more)
(+8 files in other folders)
