[package]
name = "pe-compass"
version = "0.1.0"
authors = ["dfirence <carlos.diaz.pro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = "1.0.104"
serde_json = "1.0.47"
serde_derive = "1.0.104"