[package]
name = "pe-compass"
version = "0.1.0"
authors = ["dfirence <carlos.diaz.pro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
sha2 = "0.8.1"
clap = "2.33.0"
scroll = "0.10.1"
scroll_derive = "0.10.1"
serde = "1.0.104"
serde_json = "1.0.47"
serde_derive = "1.0.104"