[package]
name = "pe-compass"
version = "0.1.0"
authors = ["dfirence https://github.com/dfirence"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs2 = "0.4.3"
sha2 = "0.8.1"
rand = "0.7.3"
clap = "2.33.0"
walkdir = "2.3.1"
chrono = "0.4.11"
scroll = "0.10.1"
scroll_derive = "0.10.1"
serde = "1.0.104"
serde_json = "1.0.47"
serde_derive = "1.0.104"
